une animation comme les slides

--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,12 @@
 </head>
 <body>
 
-  <div class="rond">
-    <div class="carre"></div>
-  </div>
-
-  
+  <h1 class="title">
+    <span class="title--line">Un</span>
+    <span class="title--line title--bold">super</span>
+    <span class="title--line">site</span>
+    <span class="title--line">internet</span>
+  </h1>
 
 </body>
 </html>
