Avec timeline - ps: fonctionne pas chez moi ...

--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="styles/app.css">
-
-  <script src="scripts/app.js" defer></script>
+<!-- 
+  <script src="scripts/app.js" defer></script> -->
+  <script src="scripts/timeline.js" defer></script>
 </head>
 <body>
+
+  <button class="btn">Go</button>
 
   <h1 class="title">
     <span class="title--line">Un</span>
