--- a/src/index.html
+++ b/src/index.html
@@ -11,20 +11,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="styles/app.css">
-<!-- 
-  <script src="scripts/app.js" defer></script> -->
-  <script src="scripts/timeline.js" defer></script>
+
+  <script src="scripts/app.js" defer></script>
 </head>
 <body>
 
-  <button class="btn">Go</button>
-
   <h1 class="title">
-    <span class="title--line">Un</span>
-    <span class="title--line title--bold">super</span>
-    <span class="title--line">site</span>
-    <span class="title--line">internet</span>
+    <span class="title--line">A long time ago in a galaxy far,</span>
+    <span class="title--line">far away...</span>
   </h1>
+
+  <img src="assets/images/Logo.svg" alt="Logo Star Wars" class="logo">
+
+  <div class="def">
+    <h2 class="def--center def--title">A new hope</h2>
+    <p class="def--justify">It is a period of civil war. Rebel spaceships, striking from a hidden base, have won their first victory against the evil Galactic Empire.</p>
+    <p class="def--justify">During the battle, Rebel spies managed to steal secret plans to the Empire's ultimate weapon, the DEATH STAR, and space station with enough power to destroy an entire planet.</p>
+    <p class="def--justify">Pursued by the Empire's sinister agents, Princess Leia races home aboard her starship, custodian of the stolen plans that can save her people and restore freedom to the galaxy</p>
+  </div>
 
 </body>
 </html>
