Test du plugin ScrollTrigger

--- a/src/index.html
+++ b/src/index.html
@@ -13,18 +13,23 @@
   <link rel="stylesheet" href="styles/app.css">
 <!-- 
   <script src="scripts/app.js" defer></script> -->
-  <script src="scripts/timeline.js" defer></script>
+  <script src="scripts/app.js" defer></script>
 </head>
 <body>
 
-  <button class="btn">Go</button>
+  <div class="box">
+    A
+  </div>
 
-  <h1 class="title">
-    <span class="title--line">Un</span>
-    <span class="title--line title--bold">super</span>
-    <span class="title--line">site</span>
-    <span class="title--line">internet</span>
-  </h1>
+  <div class="box">
+    B
+  </div>
+
+  <div class="box">
+    C
+  </div>
+
+
 
 </body>
 </html>
